--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
         <label for="age">Car Age:</label>
         <input type="Number" id="carage"  required>
 
-        <label for="dob">Date of Purchase</label>
-        <input type="Date" id="dob" name="dob" required>
+        <label for="dob">Date of Purchase(dop)</label>
+        <input type="date" id="dob" name="dob" required>
 
        
 		<label for="password">Password</label>
