--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
             <option value="mercedes">Mercedes</option>
         </select>
 
-        <label for="age">Car Age:</label>
+        <label for="carage">Car Age:</label>
         <input type="Number" id="carage"  required>
 
         <label for="dob">Date of Purchase(dop)</label>
