--- a/main.html
+++ b/main.html
@@ -32,8 +32,10 @@
         <label for="carage">Car Age:</label>
         <input type="Number" id="carage"  required>
 
-        <label for="dob">Date of Purchase(dop)</label>
-        <input type="date" id="dob" name="dob" required>
+<!--         <label for="dob">Date of Purchase(dop)</label>
+        <input type="date" id="dob" name="dob" required> -->
+		<label for="dop">Date of Purchase(dop)</label>
+         <input type="date" id="dop" name="dob" required>
 
        
 		<label for="password">Password</label>
